--- a/Training/app/src/main/res/values/strings.xml
+++ b/Training/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Training</string>
+    <string name="app_name">Parkino</string>
     <string name="textwarn">warn</string>
 </resources>
